fix align

--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -53,11 +53,11 @@
     }
   }
 
-  &__quantity {
-    margin-left: 0;
+  &__delete {
+    justify-content: flex-end;
 
     @media ($medium-up) {
-      margin-left: spacing(17);
+      justify-content: center;
     }
   }
 
